--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/svg+xml" href="/2.svg" />
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Умные подписки</title>
+    <title>Умные подписки (beta)</title>
   </head>
   <body>
     <div id="root"></div>
