Set up the pre-render for SEO and create robot.txt, sitemap and other settings for SEO

--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Умные подписки (beta)</title>
+    
+    <!-- Open Graph -->
+    <meta property="og:title" content="Умные подписки (beta)" />
+    <meta property="og:description" content="Управление подписками и аналитика" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://smart-subscriptions.ru" />
+    <meta property="og:image" content="https://smart-subscriptions.ru/logo.png" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Умные подписки (beta)" />
+    <meta name="twitter:description" content="Управление подписками и аналитика" />
+    <meta name="twitter:image" content="https://smart-subscriptions.ru/logo.png" />  
   </head>
   <body>
     <div id="root"></div>
